syntax = "proto3";

option csharp_namespace = "IdentityService.Protos";

package IdentityService;

service TestUser {
  rpc GetById (UserRequest) returns (UserReply);
}

message UserRequest {
  string Id = 1;
}

message UserReply {
  string Id = 1;
  string Name = 2;
}
